--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Adalab Web Starter Kit</title>
-  <link rel="icon" href="favicon.png"/>
-	<link rel="stylesheet" href="assets/css/main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Montserrat|Poppins|Shadows+Into+Light|Work+Sans" rel="stylesheet">
+    <title>Ejercicio 8 BONUS</title>
 </head>
-<body>
-  <div class="page">
-    <partial src="_header.html" label="Header"></partial>
-    <partial src="_main.html" label="Main"></partial>
-  </div>
+<body class="body">
+    <h1 class="mood__face">:)</h1>
+
+    <form></form>
+        <label class="label" for="choose-mood">Choose your mood</label>
+        <div class="mood__controls">
+            <select class="mood__control mood__control--choose" id="choose-mood">
+                    <option value=":)" class="happy">:)</option>
+                    <option value=":(" class="sad">:(</option>
+            </select>
+            <button class="mood__control mood__control--update" type="submit">Update!</button>
+        </div>
+
+    </form>
+    <script type="text/javascript" src="scripts/main.js"></script>
 </body>
 </html>
