--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="assets/scss/main.scss">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Montserrat|Poppins|Shadows+Into+Light|Work+Sans" rel="stylesheet">
     <title>Ejercicio 8 BONUS</title>
 </head>
@@ -22,6 +22,6 @@
         </div>
 
     </form>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
