--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Montserrat|Poppins|Shadows+Into+Light|Work+Sans" rel="stylesheet">
-    <title>Ejercicio 8 BONUS</title>
+    <title>Choose your mood! :)</title>
 </head>
 <body class="body">
     <h1 class="mood__face">:)</h1>
