--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -9,19 +9,8 @@
     <title>Choose your mood! :)</title>
 </head>
 <body class="body">
-    <h1 class="mood__face">:)</h1>
-
-    <form></form>
-        <label class="label" for="choose-mood">Choose your mood</label>
-        <div class="mood__controls">
-            <select class="mood__control mood__control--choose" id="choose-mood">
-                    <option value=":)" class="happy">:)</option>
-                    <option value=":(" class="sad">:(</option>
-            </select>
-            <button class="mood__control mood__control--update" type="submit">Update!</button>
-        </div>
-
-    </form>
-    <script type="text/javascript" src="assets/js/main.js"></script>
+  <partial src="_header.html"></partial>
+  <partial src="_main.html"></partial>
+  <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
