--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,1 +1,3 @@
-<header class="page__header">@@label</header>
+<header class="page__header">
+  <h1 class="title__header">How are you today?</h1>
+</header>
