--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -11,6 +11,7 @@
 <body class="body">
   <partial src="_header.html"></partial>
   <partial src="_main.html"></partial>
+  <partial src="_footer.html"></partial>
   <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
