--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -6,12 +6,12 @@
   margin: 0;
   color: #000;
   background-color: #eccc68;
-  height: 100vh;
+  height: 100%;
 }
 
 .page__header {
   width: 100vw;
-  font-family: 'Work Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size:18px;
   text-align: center;
   background-color: #e84393;
@@ -23,10 +23,11 @@
 }
 
 .page__main {
+  height: 80vh;
   display: flex;
   font-family: 'Work Sans', sans-serif;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 18px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -35,7 +36,7 @@
 /*label*/
 
 .label{
-  margin: 10px;
+  margin: 0;
 }
 
 /* mood face */
@@ -56,5 +57,24 @@
 }
 
 .mood__control {
-  margin: 5px;
+  margin: 0;
 }
+
+//Footer
+
+.page__footer {
+  width: 100vw;
+  font-family: 'Poppins', sans-serif;
+  font-size:14px;
+  text-align: center;
+  background-color: #e84393;
+  bottom: 0%;
+}
+
+.text__footer {
+  margin: 0;
+  padding: 1%;
+  color: #dfe6e9;
+}
+
+
